Fix contrast on search filters and selected folder

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -12,7 +12,7 @@ https://github.com/Foundry376/Mailspring/blob/master/app/static/base/ui-variable
 @gray-lighter: darken(@gray-base, 92.5%);
 @white: #0a0a0a;
 
-@accent-primary: #ffffff; //Selected email color
+@accent-primary: #5e5e5e; // #0a0a0a;//#ffffff; //Selected email color, links, selected item on toolbar
 @accent-primary-dark: darken(@accent-primary, 10%);
 
 @background-primary: #fdf6e3;
@@ -26,8 +26,8 @@ https://github.com/Foundry376/Mailspring/blob/master/app/static/base/ui-variable
 @border-color-divider: @border-color-secondary;
 
 @text-color: #6a6c69;
-@text-color-subtle: fadeout(@text-color, 20%);
-@text-color-very-subtle: fadeout(@text-color, 40%);
+@text-color-subtle: fadeout(@text-color, 20%); //nonselected toolbar text
+@text-color-very-subtle: fadeout(@text-color, 40%); //folder header, email name, search text
 @text-color-inverse: #6a6c69;
 @text-color-inverse-subtle: fadeout(@text-color-inverse, 20%);
 @text-color-inverse-very-subtle: fadeout(@text-color-inverse, 50%);
